feat: Fazendo ultimos ajustes no projeto part1

--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-auto">
-                    <p> <i class='bx bxs-envelope'></i>contato@premiermerchan.com.br</p>
-                    <p> <i class='bx bxs-phone-call'></i> (92) 99407-1134</p>
+                    <p> <i class='bx bxs-envelope'></i>premiermerchanconsultoria@gmail.com</p>
+                    <p> <i class='bx bxs-phone-call'></i> (92) 98495-2508</p>
                 </div>
                 <div class="col-auto social-icons">
-                    <a href="#" target="_blank"><i class='bx bxl-facebook'></i></a>
-                    <a href="#" target="_blank"><i class='bx bxl-instagram'></i></a>
+                  <a href="https://www.facebook.com/profile.php?id=100090069506669&mibextid=ZbWKwL" target="_blank"><i class='bx bxl-facebook'></i></a>
+                  <a href="https://instagram.com/premiermerchan?igshid=YmMyMTA2M2Y=" target="_blank"><i class='bx bxl-instagram'></i></a>
+                  <a href="https://twitter.com/Premiermerchan?t=Z6XCDiFq1dyLJr1k6g9jXQ&s=09" target="_blank"><i class='bx bxl-twitter'></i></a>
                 </div>
             </div>
         </div>
@@ -117,26 +118,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="col-12 mt-4">
-                            <div class="info-box">
-                                <img src="img/icon4.png" alt="">
-                                <div class="ms-4">
-                                    <h5>E-mail Marketing</h5>
-                                    <p>It is a long established fact that a reader will be distracted by the readable
-                                        content of a page </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 mt-4">
-                            <div class="info-box">
-                                <img src="img/icon5.png" alt="">
-                                <div class="ms-4">
-                                    <h5>Business Marketing</h5>
-                                    <p>It is a long established fact that a reader will be distracted by the readable
-                                        content of a page </p>
-                                </div>
-                            </div>
-                        </div> -->
                     </div>
                 </div>
                 <div class="col-lg-5">
@@ -151,7 +132,7 @@
         <div class="container">
             <div class="row text-center justify-content-center gy-4">
                 <div class="col-lg-2 col-sm-6">
-                    <h1 class="display-4">0</h1>
+                    <h1 class="display-4">90K+</h1>
                     <p class="mb-0">Clientes</p>
                 </div>
                 <div class="col-lg-2 col-sm-6">
@@ -177,58 +158,48 @@
                     <div class="intro">
                         <h6>Nossos Serviços</h6>
                         <h1>O que fazemos?</h1>
-                        <p class="mx-auto">Lorem Ipsum is not simply random text. It has
-                            roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old</p>
-                    </div>
                 </div>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
                     <div class="service">
-                        <img src="img/icon1.png" alt="">
-                        <h5>Premier Merchan Consultoria</h5>
-                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                            classical Latin literature from</p>
+                        <img src="img/logo.JPG" style="width: 167px" alt="Logo da Empresa">
+                        <h5>Transformar pra inovar, seu lugar é aqui</h5>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="service">
                         <img src="img/icon2.png" alt="">
-                        <h5>Design de Logo</h5>
-                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                            classical Latin literature from</p>
+                        <h5>Consultoria de Negócio</h5>
+                        <p>Acompanhamento do seu negócio deis da criação ou até mesmo de marcas já existentes, elaborando estratégias de vendas e marketing.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="service">
                         <img src="img/icon3.png" alt="">
-                        <h5>Consultoria de negócio</h5>
-                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                            classical Latin literature from</p>
+                        <h5>Marketing Digital</h5>
+                        <p>Criamos seu visual digital, garantido um novo alcance de público e engajamento nas redes sociais.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="service">
                         <img src="img/icon4.png" alt="">
-                        <h5>Produção de vídeos</h5>
-                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                            classical Latin literature from</p>
+                        <h5>Identidade da Marca</h5>
+                        <p>Criamos sua identidade de marca no mercado para que sua empresa posso se destacar e se diferenciar da concorrência.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="service">
                         <img src="img/icon5.png" alt="">
-                        <h5>Identidade de Marca</h5>
-                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                            classical Latin literature from</p>
+                        <h5>Design de Interiores</h5>
+                        <p>Cuidamos do visual físico da sua empresa assim dando conforto e um ambiente agradável ao seus clientes.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="service">
                         <img src="img/icon6.png" alt="">
-                        <h5>Outro</h5>
-                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                            classical Latin literature from</p>
+                        <h5>Novas tendências de merchandising</h5>
+                        <p>Acompanhamos as mais novas tendências do mercado e trazemos à sua empresa para está sempre em alta no mercado. </p>
                     </div>
                 </div>
             </div>
@@ -240,54 +211,25 @@
             <div class="row">
                 <div class="col-12">
                     <div class="intro">
-                        <h6>Portifólio</h6>
+                        <h6>Portfólio</h6>
                         <h1>Projetos de Sucesso</h1>
-                        <p class="mx-auto">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
-                            roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old</p>
+                        <p class="mx-auto">Criação de vitrines com técnicas de marketing e merchandising, técnicas adquiridas pelas aulas do curso de vendas do centro de educação profissional José trados - Campos cidade nova.</p>
                     </div>
                 </div>
             </div>
         </div>
         <div id="projects-slider" class="owl-theme owl-carousel">
             <div class="project">
-                <div class="overlay"></div>
-                <img src="img/project1.jpg" alt="">
-                <div class="content">
-                    <h2>Consultoria de Marketing</h2>
-                    <h6>Website Design</h6>
-                </div>
+                <img src="img/portfolio/01.jpg" alt="">
             </div>
             <div class="project">
-                <div class="overlay"></div>
-                <img src="img/project2.jpg" alt="">
-                <div class="content">
-                    <h2>Consultoria de Marketing</h2>
-                    <h6>Website Design</h6>
-                </div>
+                <img src="img/portfolio/02.jpg" alt="">
             </div>
             <div class="project">
-                <div class="overlay"></div>
-                <img src="img/project3.jpg" alt="">
-                <div class="content">
-                    <h2>Consultoria de Marketing</h2>
-                    <h6>Website Design</h6>
-                </div>
+                <img src="img/portfolio/03.jpg" alt="">
             </div>
             <div class="project">
-                <div class="overlay"></div>
-                <img src="img/project4.jpg" alt="">
-                <div class="content">
-                    <h2>Consultoria de Marketing</h2>
-                    <h6>Website Design</h6>
-                </div>
-            </div>
-            <div class="project">
-                <div class="overlay"></div>
-                <img src="img/project5.jpg" alt="">
-                <div class="content">
-                    <h2>Consultoria de Marketing</h2>
-                    <h6>Website Design</h6>
-                </div>
+                <img src="img/portfolio/04.jpg" alt="">
             </div>
         </div>
     </section>
@@ -367,12 +309,13 @@
                         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                             classical Latin literature from</p>
                         <div class="col-auto social-icons">
-                            <a href="" target="_blank"><i class='bx bxl-facebook'></i></a>
-                            <a href="#" target="_blank"><i class='bx bxl-instagram'></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100090069506669&mibextid=ZbWKwL" target="_blank"><i class='bx bxl-facebook'></i></a>
+                            <a href="https://instagram.com/premiermerchan?igshid=YmMyMTA2M2Y=" target="_blank"><i class='bx bxl-instagram'></i></a>
+                            <a href="https://twitter.com/Premiermerchan?t=Z6XCDiFq1dyLJr1k6g9jXQ&s=09" target="_blank"><i class='bx bxl-twitter'></i></a>
                         </div>
                         <div class="col-auto conditions-section">
-                            <a href="#">Privacidade</a>
-                            <a href="#">Termos de uso</a>
+                            <!-- <a href="#">Privacidade</a>
+                            <a href="#">Termos de uso</a> -->
                         </div>
                     </div>
                 </div>
