fix: Corrige carrousel de portfolio

--- a/index.html
+++ b/index.html
@@ -220,16 +220,16 @@
         </div>
         <div id="projects-slider" class="owl-theme owl-carousel">
             <div class="project">
-                <img src="img/portfolio/01.jpg" alt="">
+                <img src="img/portfolio/01.JPG" alt="">
             </div>
             <div class="project">
-                <img src="img/portfolio/02.jpg" alt="">
+                <img src="img/portfolio/02.JPG" alt="">
             </div>
             <div class="project">
-                <img src="img/portfolio/03.jpg" alt="">
+                <img src="img/portfolio/03.JPG" alt="">
             </div>
             <div class="project">
-                <img src="img/portfolio/04.jpg" alt="">
+                <img src="img/portfolio/04.JPG" alt="">
             </div>
         </div>
     </section>
