--- a/index.html
+++ b/index.html
@@ -63,9 +63,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#portfolio">Portfólio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#team">Time</a>
-                    </li>
                 </ul>
                 <a id="contactUs" href="#" data-bs-toggle="modal" data-bs-target="#contactUsModal"
                     class="btn btn-brand ms-lg-3">Contato</a>
@@ -80,7 +77,7 @@
                 <div class="row">
                     <div class="col-12 col-lg-10 offset-lg-1 text-white">
                         <h6 class="text-white text-uppercase">Consultoria estratégica</h6>
-                        <h1 class="display-3 my-4">Elevando o Marketing e vendas da sua Empresa<br /></h1>
+                        <h1 class="display-3 my-4">Transformar pra inovar, seu lugar é aqui<br /></h1>
                         <a href="#about" class="btn btn-brand">Saiba mais</a>
                         <a href="#services" class="btn btn-outline-light ms-3">Nosso Trabalho</a>
                     </div>
@@ -90,7 +87,7 @@
     </div>
 
     <!-- ABOUT -->
-    <section id="about">
+    <section class="bg-light" id="about">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-5 py-5">
@@ -122,30 +119,6 @@
                 </div>
                 <div class="col-lg-5">
                     <img src="img/about.png" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- MILESTONE -->
-    <section id="milestone">
-        <div class="container">
-            <div class="row text-center justify-content-center gy-4">
-                <div class="col-lg-2 col-sm-6">
-                    <h1 class="display-4">90K+</h1>
-                    <p class="mb-0">Clientes</p>
-                </div>
-                <div class="col-lg-2 col-sm-6">
-                    <h1 class="display-4">2K</h1>
-                    <p class="mb-0">Linhas de código</p>
-                </div>
-                <div class="col-lg-2 col-sm-6">
-                    <h1 class="display-4">3</h1>
-                    <p class="mb-0">Contatos Atendidos</p>
-                </div>
-                <div class="col-lg-2 col-sm-6">
-                    <h1 class="display-4">150</h1>
-                    <p class="mb-0">Seguidores no Instagram</p>
                 </div>
             </div>
         </div>
@@ -234,80 +207,13 @@
         </div>
     </section>
 
-    <section id="team">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="intro">
-                        <h6>Time</h6>
-                        <h1>Membros do Time</h1>
-                        <p class="mx-auto">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
-                            roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-4 col-md-8">
-                    <div class="team-member">
-                        <div class="image">
-                            <img src="img/team_1.jpg" alt="">
-                            <div class="social-icons">
-                                <a href="#" target="_blank"><i class='bx bxl-facebook'></i></a>
-                                <a href="#" target="_blank"><i class='bx bxl-instagram'></i></a>
-                            </div>
-                            <div class="overlay"></div>
-                        </div>
-
-                        <h5>Marvin McKinney</h5>
-                        <p>Coordenador de Marketing</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-8">
-                    <div class="team-member">
-                        <div class="image">
-                            <img src="img/team_2.jpg" alt="">
-                            <div class="social-icons">
-                                <a href="#"><i class='bx bxl-facebook'></i></a>
-                                <a href="#"><i class='bx bxl-twitter'></i></a>
-                                <a href="#"><i class='bx bxl-instagram'></i></a>
-                                <a href="#"><i class='bx bxl-pinterest'></i></a>
-                            </div>
-                            <div class="overlay"></div>
-                        </div>
-
-                        <h5>Kathryn Murphy</h5>
-                        <p>CEO</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-8">
-                    <div class="team-member">
-                        <div class="image">
-                            <img src="img/team_3.jpg" alt="">
-                            <div class="social-icons">
-                                <a href="#"><i class='bx bxl-facebook'></i></a>
-                                <a href="#"><i class='bx bxl-twitter'></i></a>
-                                <a href="#"><i class='bx bxl-instagram'></i></a>
-                                <a href="#"><i class='bx bxl-pinterest'></i></a>
-                            </div>
-                            <div class="overlay"></div>
-                        </div>
-
-                        <h5>Darrell Steward</h5>
-                        <p>Engenheiro de Software</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <footer>
         <div class="footer-top text-center">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-6 text-center">
                         <h4 class="navbar-brand">Premier Merchan Consultoria<span class="dot">.</span></h4>
-                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                            classical Latin literature from</p>
+                        <p>Elevando o Marketing e vendas da sua Empresa</p>
                         <div class="col-auto social-icons">
                             <a href="https://www.facebook.com/profile.php?id=100090069506669&mibextid=ZbWKwL" target="_blank"><i class='bx bxl-facebook'></i></a>
                             <a href="https://instagram.com/premiermerchan?igshid=YmMyMTA2M2Y=" target="_blank"><i class='bx bxl-instagram'></i></a>
